fix issues with alignment of error msgs

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
     
     margin: auto;
     width: 90%;
-    height: 45px;
+    height: 58px;
     padding: 10px;
     border:  3px solid #142035;
     border-radius: 10px;
